feat(golearningstack): swagger working
