# pkg/api/message/controller/learning_controller.go
@@ -22,6 +22,15 @@ func NewLearningController(service service.LearningServiceInterface) *LearningCo
 	return &LearningController{service: service}
 }
 
+// @Summary Get all messages
+// @Description Fetch all messages saved
+// @Tags Message
+// @Produce json
+// @Param	Authorization	header	string	true "Bearer token"
+// @Success 200 {array} response.Message
+// @Failure 403 {string} message
+// @Failure 500 {string} message
+// @Router /learning [get]
 func (ctrl *LearningController) GetAllMessages(c *gin.Context) {
 	controllerLogger.Println("Getting all messages...")
 	if messages, err := ctrl.service.GetAllMessages(); err != nil {
@@ -32,6 +41,17 @@ func (ctrl *LearningController) GetAllMessages(c *gin.Context) {
 	}
 }
 
+// @Summary Get message by Id
+// @Description Fetch message by Id
+// @Tags Message
+// @Produce json
+// @Param	Authorization	header	string	true "Bearer token"
+// @Param			id		path		int 				true	"Message ID"
+// @Success 200 {object} response.Message
+// @Failure 403 {string} message
+// @Failure 404 {string} message
+// @Failure 500 {string} message
+// @Router /learning/{id} [get]
 func (ctrl *LearningController) GetMessage(c *gin.Context) {
 	var id, _ = strconv.Atoi(c.Param("id"))
 	controllerLogger.Printf("Getting message with Id: %v", id)
@@ -44,6 +64,18 @@ func (ctrl *LearningController) GetMessage(c *gin.Context) {
 	}
 }
 
+// @Summary Create a new message
+// @Description Create a new message
+// @Tags Message
+// @Accept json
+// @Produce json
+// @Param	Authorization	header	string	true "Bearer token"
+// @Param			message	body		request.MessageRequest	true	"Create message"
+// @Success 201 {object} response.Message
+// @Failure 403 {string} message
+// @Failure 400 {string} message
+// @Failure 500 {string} message
+// @Router /learning [post]
 func (ctrl *LearningController) CreateMessage(c *gin.Context) {
 	controllerLogger.Println("Creating new message ...")
 	var message request.MessageRequest
@@ -61,6 +93,15 @@ func (ctrl *LearningController) CreateMessage(c *gin.Context) {
 	}
 }
 
+// @Summary Delete message by Id
+// @Description Delete message by Id
+// @Tags Message
+// @Param	Authorization	header	string	true "Bearer token"
+// @Param			id		path		int 				true	"Message ID"
+// @Success 204
+// @Failure 403 {string} message
+// @Failure 500 {string} message
+// @Router /learning/{id} [delete]
 func (ctrl *LearningController) DeleteMessage(c *gin.Context) {
 	var id, _ = strconv.Atoi(c.Param("id"))
 	controllerLogger.Printf("Deleting message with Id: %v", id)
@@ -73,6 +114,20 @@ func (ctrl *LearningController) DeleteMessage(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
+// @Summary Update a message
+// @Description Update a message
+// @Tags Message
+// @Accept json
+// @Produce json
+// @Param	Authorization	header	string	true "Bearer token"
+// @Param			message	body		request.MessageRequest	true	"Update message"
+// @Param			id		path		int 				true	"Message ID"
+// @Success 200 {object} response.Message
+// @Failure 404 {string} message
+// @Failure 403 {string} message
+// @Failure 400 {string} message
+// @Failure 500 {string} message
+// @Router /learning/{id} [put]
 func (ctrl *LearningController) UpdateMessage(c *gin.Context) {
 	var id, _ = strconv.Atoi(c.Param("id"))
 	var updateMessage request.MessageRequest
